test-suite/cases/eure-schema-to-json-schema/errors/tuple-constraints-not-supported.eure
// Test error: Tuple constraints cannot be fully represented in JSON Schema

schema = ```eure
$variant = "tuple"
items[0] = `text`
items[1] = `integer`
```

json_schema_errors[] = "Tuple constraints"
